@@ -18,6 +18,7 @@ CVS HEAD
   * Added new menu item in the Instruments Database window: Edit/Find
 
   * Fantasia:
+    - Major memory optimizations when too many sampler channels are present
     - Added option to show the Instruments Database on
       the Right-Side Pane of the Fantasia's main window
       (choose Edit/Preferences, then click the `View' tab)
